fix: remove backface visibility

--- a/components/flipCard/flipCard.module.scss
+++ b/components/flipCard/flipCard.module.scss
@@ -5,6 +5,8 @@
   border: 1px solid grey;
   background-color: white;
   padding: 1rem;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .back {
